[package]
name = "rust_playground"
authors = ["Tuan"]
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.6.0"
axum-server = "0.6.0"
http = "1.0.0"
http-body = "1.0.0"
hyper = { version = "1.0.1", features = ["http1", "http2", "server"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0"
serde_json = "1.0.119"
